# Utf8Ucs2Converter

./: .gitignore  CMakeLists.txt
src/: Utf8Ucs2Converter.cpp  Utf8Ucs2Converter.h  main.cpp  test1.cxx
